Bug 131489 - no notification when email is read-only but sender and subject set to "unkown"
Summary: no notification when email is read-only but sender and subject set to "unkown"
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.12.90
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-07-28 21:19 UTC by S. Burmeister
Modified: 2009-07-15 17:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2006-07-28 21:19:00 UTC
Version:            (using KDE KDE 3.5.4)
Installed from:    SuSE RPMs
OS:                Linux

If files, e.g. due to moving them via burning them to a CD, only have a -r- for the user, kmail does not notify the user that it cannot write to the email but just sets sender and subject to unknown, which is not helpful at all to find the reason of this issue. Index-files were writable.

Apart from that, why turn the sender and subject to unknown? Since kmail can read the emails, why not display them and just notify the user that kmail cannot write to it, i.e. cannot save the status "replied", "forwarded" etc.?

Expected behaviour:
- If an email is readable, display it without changing anything to "unknown".
- If it is not writable, notify the user about the restrictions this implies.
Comment 1 Jaime Torres 2009-07-14 18:45:51 UTC
In kmail 1.12.90 (svn 996033)

In fact I get the following message in the stdout:
 KMFolderMaildir::getDwString Could not open file r+ "the file with -r-------- 
righs".
Comment 2 Jaime Torres 2009-07-15 16:41:16 UTC
SVN commit 997218 by jtamate:

BUG: 131489

The r+ is not needed to read the file. (and was never appened).

 M  +4 -4      kmfoldermaildir.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=997218
Comment 3 Allen Winter 2009-07-15 17:28:32 UTC
SVN commit 997228 by winterz:

Backport r997218 by jtamate from trunk to the 4.3 branch:

CCBUG: 131489

The r+ is not needed to read the file. (and was never appened).


 M  +4 -4      kmfoldermaildir.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=997228