BUG: 131489

The r+ is not needed to read the file. (and was never appened).

svn path=/trunk/KDE/kdepim/; revision=997218